# UniversalAudioAttacks

./: .gitignore  Dataset_import.ipynb  Dataset_import.py  Main_Loop.ipynb  Main_Loop.py  Model_import.ipynb  Model_import.py  Model_import_working.py  README.md  Resample.ipynb  Resample.py  SVM.ipynb  SVM.py  attackPipeline.yml  datasets.json  hearPipeline.yml  patched_predictions_runner.py  patched_runner.py  pyproject.toml  savedModelsName.json  utils.py
logs/: embeddingsName.json
