[project]
name = "universalaudioattacks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
  "audio-dbert",
  "efficient-latent",
  "fairseq",
  "hearbaseline>=2021.1.1",
  "heareval>=2021.1.3",
  "pydub>=0.25.1",
  "pytorch-lightning<2.0",
  "speechbrain<=0.5.15",
  "torch>=2.6",
  "torchvision>=0.23.0",
]

[tool.uv.sources]
audio-dbert = { git = "https://github.com/RF5/audio_dbert.git" }
# the following repo by 00sapo are forks that fix dependency constraints
fairseq = { git = "https://github.com/00sapo/fairseq.git" }
efficient-latent = { git = "https://github.com/00sapo/HEAR2021_EfficientLatent.git" }
hearbaseline = { git = "https://github.com/00sapo/hear-baseline.git" }
heareval = { git = "https://github.com/00sapo/hear-eval-kit.git" }
